--- a/app/src/main/res/layout/activity_task3.xml
+++ b/app/src/main/res/layout/activity_task3.xml
@@ -20,7 +20,10 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <include layout="@layout/content_task3" />
+    <include
+        layout="@layout/content_task3"
+        app:layout_anchor="@+id/imageView4"
+        app:layout_anchorGravity="center" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
@@ -29,5 +32,48 @@
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
         app:srcCompat="@android:drawable/ic_dialog_email" />
+
+    <Button
+        android:id="@+id/back"
+        android:layout_width="196dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="6dp"
+        android:layout_marginLeft="50dp"
+        android:layout_marginTop="60dp"
+        android:onClick="main"
+        android:text="На главную"
+        app:icon="@drawable/abc_vector_test" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="31dp"
+        android:layout_marginStart="90dp"
+        android:layout_marginLeft="50dp"
+        android:layout_marginTop="130dp"
+        android:text="@string/task3task"
+        app:layout_anchorGravity="bottom|center" />
+
+    <ImageView
+        android:id="@+id/imageView4"
+        android:layout_width="390dp"
+        android:layout_height="276dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginLeft="50dp"
+        android:layout_marginTop="200dp"
+        android:contentDescription="@string/todo"
+        app:layout_anchorGravity="center"
+        app:srcCompat="@drawable/task3" />
+
+    <Button
+        android:id="@+id/task31"
+        android:layout_width="33dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="80dp"
+        android:layout_marginLeft="50dp"
+        android:layout_marginTop="330dp"
+        android:background="@android:color/transparent"
+        android:onClick="task31"
+        android:text="Button" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
