--- a/app/src/main/res/layout/activity_task52.xml
+++ b/app/src/main/res/layout/activity_task52.xml
@@ -4,56 +4,61 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.home.Task41">
+    tools:context=".ui.home.Task52">
 
     <Button
         android:id="@+id/back"
-        android:layout_width="196dp"
-        android:layout_height="wrap_content"
+        android:layout_width="179dp"
+        android:layout_height="67dp"
         android:onClick="main"
         android:text="На главную"
         app:icon="@drawable/abc_vector_test"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.046"
+        app:layout_constraintHorizontal_bias="0.074"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.023"
         tools:ignore="MissingConstraints" />
 
-    <ImageView
-        android:id="@+id/Task41"
-        android:layout_width="376dp"
-        android:layout_height="337dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/task41" />
-
     <TextView
-        android:id="@+id/textView4"
-        android:layout_width="331dp"
-        android:layout_height="51dp"
-        android:text="@string/task4task"
+        android:id="@+id/textView"
+        android:layout_width="196dp"
+        android:layout_height="34dp"
+        android:text="@string/decided"
+        app:layout_anchorGravity="bottom|center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.135" />
+        app:layout_constraintVertical_bias="0.159"
+        tools:ignore="MissingConstraints" />
+
+    <ImageView
+        android:id="@+id/imageView4"
+        android:layout_width="416dp"
+        android:layout_height="351dp"
+        android:contentDescription="@string/todo"
+        app:layout_anchorGravity="center"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/task52"
+        tools:ignore="MissingConstraints" />
 
     <Button
-        android:id="@+id/task42"
-        android:layout_width="33dp"
-        android:layout_height="30dp"
-        android:background="@android:color/transparent"
-        android:onClick="task42"
-        android:text="Button"
+        android:id="@+id/button2"
+        android:layout_width="174dp"
+        android:layout_height="69dp"
+        android:onClick="task6"
+        android:text="Задача №6"
+        app:icon="@drawable/ic_menu_send"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.544"
+        app:layout_constraintHorizontal_bias="0.93"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.35"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintVertical_bias="0.023" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
